force-app/main/default/objects/IntegrationMap__c/IntegrationMap__c.object-meta.xml
<CustomObject>
    <description>[a09][IntegrationMap__c] Mapa de integração.</description>
    <label>Mapa de integração</label>
    <nameField>
        <label>Integração</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mapas de integração</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>