force-app/main/default/objects/IntegrationMap__c/fields/CommandClassName__c.field-meta.xml
<CustomField>
    <fullName>CommandClassName__c</fullName>
    <defaultValue>&quot;GenericIntegrationService&quot;</defaultValue>
    <label>Classe de comando</label>
    <length>255</length>
    <type>Text</type>
</CustomField>