force-app/main/default/objects/IntegrationMap__c/fields/CustomOperationClassName__c.field-meta.xml
<CustomField>
    <fullName>CustomOperationClassName__c</fullName>
    <label>Nome da classe da operação customizada</label>
    <length>255</length>
    <type>Text</type>
</CustomField>