force-app/main/default/objects/IntegrationMap__c/fields/DMLOperationTxt__c.field-meta.xml
<CustomField>
    <fullName>DMLOperationTxt__c</fullName>
    <label>Operação</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Delete</fullName>
            </value>
            <value>
                <fullName>Insert</fullName>
            </value>
            <value>
                <fullName>Update</fullName>
            </value>
            <value>
                <fullName>Upsert</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>