force-app/main/default/objects/IntegrationMap__c/fields/InfoTxt__c.field-meta.xml
<CustomField>
    <fullName>InfoTxt__c</fullName>
    <label>Informações</label>
    <type>TextArea</type>
</CustomField>