force-app/main/default/objects/IntegrationMap__c/fields/IntegrationId__c.field-meta.xml
<CustomField>
    <fullName>IntegrationId__c</fullName>
    <label>ID da integração</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>