force-app/main/default/objects/IntegrationMap__c/fields/OutputDataTypeTxt__c.field-meta.xml
<CustomField>
    <fullName>OutputDataTypeTxt__c</fullName>
    <label>Tipo de dado de entrada</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CSV</fullName>
            </value>
            <value>
                <fullName>JSON</fullName>
                <default>true</default>
                <label>JSON</label>
            </value>
            <value>
                <fullName>XML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>