force-app/main/default/objects/IntegrationMap__c/fields/SObjectApiNameTxt__c.field-meta.xml
<CustomField>
    <fullName>SObjectApiNameTxt__c</fullName>
    <label>API name do objeto</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>