force-app/main/default/objects/IntegrationMap__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>IntegrationId__c</columns>
    <columns>SObjectApiNameTxt__c</columns>
    <columns>DMLOperationTxt__c</columns>
    <columns>CommandClassName__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tudo</label>
</ListView>